2000-12-20  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* poe-18.el (set-frame-height): Typo fixed.

2000-12-19  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* make.bat: Do not echo.

	* poe-18.el (set-frame-heigth): Bug fixed.

2000-12-16  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* poe-18.el (frame-width): New function.
	(frame-height): Ditto.
	(set-frame-width): Ditto.
	(set-frame-heigth): Ditto.
	(read-from-minibuffer): Run `minibuffer-setup-hook' and
	`minibuffer-exit-hook'.
	(buffer-undo-list): Declared with `defvar-maybe' and add doc
	string.
	(auto-fill-function): Add doc string.
	(unread-command-event): Ditto.
	(unread-command-events): Ditto.
	(minibuffer-setup-hook): New variable.
	(minibuffer-exit-hook): Ditto.
	(minor-mode-map-alist): Ditto.
	(minor-mode-alist): Ditto.
	(minor-mode-overriding-map-alist): Ditto.

2000-12-15  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* make.bat (listing): Bug fixed.

	* README.en: Add URL that can be used to getting SKK 10.62a with
	the new byte compiler for Emacs 18.
	* README.ja: Ditto.

2000-12-15  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* Makefile (tar): Remove .cvsignore.  Use `cvs tag -R' instead of
	`cvs tag -RF'.

2000-12-15  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poe-18.el (buffer-disable-undo): Define it as a function to make
	an argument optional instead of the use of `defalias' to
	`buffer-flush-undo'.

2000-12-14   Daiki Ueno  <ueno@unixuser.org>

	* alist.el (del-alist): Simplified.

2000-12-14  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* pym.el (static-if): Put t on edebug spec instead of if.

2000-12-13  Kenichi Handa  <handa@etl.go.jp>

	* alist.el: Fix and add DOCs and comments; fix coding style.

2000-04-26  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mcs-xm.el (charsets-mime-charset-alist): Add coded-charset
	`japanese-jisx0208-1990' to MIME-charset `iso-2022-jp' and
	`iso-2022-jp-2' in UTF-2000; add new MIME-charset `iso-2022-jp-3'.
