@@ -28,24 +28,15 @@
 (require 'pcustom)
 
 (cond ((featurep 'mule)
-       (cond ((featurep 'xemacs)
-	      (require 'mcs-xm)
-	      )
-	     ((>= emacs-major-version 20)
-	      (require 'mcs-e20)
-	      )
-	     (t
-	      ;; for MULE 1.* and 2.*
-	      (require 'mcs-om)
-	      ))
-       )
+       (if (>= emacs-major-version 20)
+	   (require 'mcs-20)
+	 ;; for MULE 1.* and 2.*
+	 (require 'mcs-om)))
       ((boundp 'NEMACS)
        ;; for Nemacs and Nepoch
-       (require 'mcs-nemacs)
-       )
+       (require 'mcs-nemacs))
       (t
-       (require 'mcs-ltn1)
-       ))
+       (require 'mcs-ltn1)))
 
 (defcustom default-mime-charset-for-write
   (if (and (fboundp 'find-coding-system)
